{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "bc655c03-58c6-46eb-a813-b08cd0885085",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "ff6bb87a-4493-4ff0-836e-82f301156db0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "a08a4560-2010-429e-bbfc-74af38d7b5d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a70f0b43-6fbe-481a-83dc-19f77aa81522",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0f367a1-9d3b-4033-9e37-2cb7b96a296a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}